unpackaged/objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>Submit_Response__c</fullName>
        <description>Message to be displayed to the user when the Survey has been submitted</description>
        <inlineHelpText>Message to be displayed to the user when the Survey has been submitted</inlineHelpText>
        <label>Submit Response</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Header__c</fullName>
        <label>Survey Header</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <defaultValue>&quot;Undefined&quot;</defaultValue>
        <label>URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thankYouLink__c</fullName>
        <label>thankYouLink</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thankYouText__c</fullName>
        <label>thankYouText</label>
        <type>TextArea</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>standard_view</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>standard view</label>
    </listViews>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>